<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_words"
        android:icon="@drawable/ic_search"
        android:orderInCategory="10"
        android:title="@string/action_search_by_word"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_tools_word_items"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="20"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_flip_word_items"
        android:icon="@drawable/ic_flip"
        android:orderInCategory="30"
        android:title="@string/flip_mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_order_words"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="40"
        android:title="@string/order_words"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/item_order_by_add_time"
                android:icon="@drawable/ic_by_add_time"
                android:orderInCategory="10"
                android:title="@string/order_by_add_time" />
            <item
                android:id="@+id/item_order_by_change_date_time"
                android:icon="@drawable/ic_by_change_time"
                android:orderInCategory="20"
                android:title="@string/order_by_change_time" />
            <item
                android:id="@+id/item_order_by_alphabet"
                android:icon="@drawable/ic_by_alphabet"
                android:orderInCategory="30"
                android:title="@string/order_by_alphabet" />
        </menu>
    </item>

    <item
        android:id="@+id/action_delete_all_word_items"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="50"
        android:title="@string/action_delete_all_words"
        app:showAsAction="ifRoom" />
</menu>